--- a/applications/php/nginx/sites.d/application.conf
+++ b/applications/php/nginx/sites.d/application.conf
@@ -1,7 +1,7 @@
 server {
     listen  80;
     charset utf-8;
-    root    "/usr/share/nginx/html/";
+    root    "/usr/share/nginx/html/public/";
     server_name elasticsearch.app.com;
     index index.php;
 
